# samlang

./: .eslintignore  .gitattributes  .gitignore  .pnp.cjs  .prettierignore  .yarnrc.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  benchmark.sh  binary  build.gradle.kts  bun.lockb  cloudbuild.yaml  compile-repository.sh  compile-repository.ts  gradle.properties  layout.txt  package.json  platform-independent-build.js  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  samlang-dev  sconfig.json  settings.gradle  settings.gradle.kts  test-program  turbo.json  vercel.json  workspaces.json
.cargo/: config.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
Tests/: AllTests.sam  AndOrInsideIf.sam  Benchmark.sam  BlockInIfElse.sam  CSETest.sam  ConstantFoldingTest.sam  DevMeggo.sam  DifferentExpressionDemo.sam  DifferentModulesDemo.sam  EvaluationOrder.sam  GC.sam  IntToString.sam  LoopOptimization.sam  MathFunctions.sam  PrintHelloWorld.sam  StdLib.sam
configurations/: latest-local-linter-config.js  tsconfig.base.json
crates/samlang-checker/: Cargo.toml
crates/samlang-checker/src/: checker_integration_tests.rs  checker_tests.rs  global_signature.rs  lib.rs  main_checker.rs  pattern_matching.rs  ssa_analysis.rs  ssa_analysis_tests.rs  type_.rs  type_system.rs  typing_context.rs  typing_context_tests.rs
crates/samlang-cli/: Cargo.toml
crates/samlang-cli/src/: configuration.rs  logo.rs  main.rs
crates/samlang-compiler/: Cargo.toml
crates/samlang-compiler/src/: hir_lowering.rs  hir_string_manager.rs  hir_type_conversion.rs  lib.rs  libsam.wat  lir_lowering.rs  lir_unused_name_elimination.rs  loader.js  mir_constant_param_elimination.rs  mir_generics_specialization.rs  mir_tail_recursion_rewrite.rs  mir_type_deduplication.rs  wasm_lowering.rs
crates/samlang-core/: Cargo.toml
crates/samlang-core/src/: ast.rs  checker.rs  common.rs  compiler.rs  errors.rs  integration_tests.rs  interpreter.rs  lib.rs  libsam.wat  loader.js  optimization.rs  parser.rs  printer.rs  services.rs
crates/samlang-core/src/ast/: common_names.rs  hir.rs  hir_tests.rs  lir.rs  lir_tests.rs  loc.rs  mir.rs  mir_tests.rs  reason.rs  source.rs  source_tests.rs  wasm.rs  wasm_tests.rs
crates/samlang-core/src/checker/: annotation_converter.rs  checker_tests.rs  checker_utils.rs  checker_utils_tests.rs  global_cx.rs  global_signature.rs  global_typing_context_builder.rs  main_checker.rs  pattern_matching.rs  ssa_analysis.rs  ssa_analysis_tests.rs  type_.rs  type_system.rs  typing_context.rs  typing_context_tests.rs  undefined_imports_checker.rs
crates/samlang-core/src/compiler/: hir_constant_param_elimination.rs  hir_generics_specialization.rs  hir_lowering.rs  hir_string_manager.rs  hir_tail_recursion_rewrite.rs  hir_type_conversion.rs  hir_type_deduplication.rs  lir_lowering.rs  lir_unused_name_elimination.rs  mir_constant_param_elimination.rs  mir_generics_specialization.rs  mir_lowering.rs  mir_tail_recursion_rewrite.rs  mir_type_conversion.rs  mir_type_deduplication.rs  mir_unused_name_elimination.rs  wasm_lowering.rs
crates/samlang-core/src/interpreter/: lir_interpreter.rs  mir_interpreter.rs  source_interpreter.rs
crates/samlang-core/src/optimization/: common_subexpression_elimination.rs  conditional_constant_propagation.rs  conditional_constant_propagation_tests.rs  dead_code_elimination.rs  dead_code_elimination_tests.rs  inlining.rs  inlining_tests.rs  local_value_numbering.rs  local_value_numbering_tests.rs  loop_algebraic_optimization.rs  loop_induction_analysis.rs  loop_induction_variable_elimination.rs  loop_invariant_code_motion.rs  loop_optimizations.rs  loop_strength_reduction.rs  optimization_common.rs  unused_name_elimination.rs
crates/samlang-core/src/parser/: lexer.rs  lexer_test.rs  source_parser.rs
crates/samlang-core/src/printer/: prettier.rs  source_printer.rs
crates/samlang-core/src/services/: api.rs  api_tests.rs  ast_differ.rs  dep_graph.rs  gc.rs  global_searcher.rs  location_cover.rs  location_lookup.rs  server_state.rs  variable_definition.rs
crates/samlang-optimization/: Cargo.toml
crates/samlang-optimization/src/: common_subexpression_elimination.rs  conditional_constant_propagation.rs  conditional_constant_propagation_tests.rs  dead_code_elimination.rs  dead_code_elimination_tests.rs  inlining.rs  inlining_tests.rs  lib.rs  local_value_numbering.rs  local_value_numbering_tests.rs  loop_algebraic_optimization.rs  loop_induction_analysis.rs  loop_induction_variable_elimination.rs  loop_invariant_code_motion.rs  loop_optimizations.rs  loop_strength_reduction.rs  optimization_common.rs  scalar_replacement.rs  scalar_replacement_tests.rs  unused_name_elimination.rs
crates/samlang-parser/: Cargo.toml
crates/samlang-parser/src/: lexer.rs  lexer_test.rs  lib.rs  source_parser.rs
crates/samlang-printer/: Cargo.toml
crates/samlang-printer/src/: lib.rs  prettier.rs  source_printer.rs
crates/samlang-services/: Cargo.toml
crates/samlang-services/src/: api_tests.rs  ast_differ.rs  dep_graph.rs  gc.rs  global_searcher.rs  lib.rs  location_cover.rs  server_state.rs  variable_definition.rs
crates/samlang-wasm/: Cargo.toml  bundle.cjs  lazy-index.js  loader.js  samlang-wasm.test.mjs  setup-generated-package.sh  test-samlang-wasm.mjs
crates/samlang-wasm/src/: lib.rs
eslint-config-common/: README.md  api.js  index.js  package.json  tsconfig.json
example/: hello-world.sam
jest-esbuild-transformer/: api.js  index.js  package.json  runner.js  tsconfig.json
jest-raw-loader/: index.js  package.json
runtime/: .gitignore  Makefile  example  libsam-wasm.c  libsam.bc  link_samlang.sh  platform-flags.sh  walloc.c
rust-rewrite/: Cargo.toml
samlang-analysis/: build.gradle.kts
samlang-ast/: build.gradle.kts
samlang-checker/: build.gradle.kts  settings.gradle.kts
samlang-cli/: build.gradle.kts  build.js  loader.d.ts  loader.js  package.json  tsconfig.json
samlang-compiler-asm/: build.gradle.kts
samlang-compiler-hir/: build.gradle.kts
samlang-compiler-ir/: build.gradle.kts
(+2215 files in other folders)
