[workspace]
members = [
  "crates/samlang-ast",
  "crates/samlang-checker",
  "crates/samlang-cli",
  "crates/samlang-collections",
  "crates/samlang-compiler",
  "crates/samlang-configuration",
  "crates/samlang-errors",
  "crates/samlang-heap",
  "crates/samlang-optimization",
  "crates/samlang-parser",
  "crates/samlang-printer",
  "crates/samlang-profiling",
  "crates/samlang-services",
  "crates/samlang-wasm",
]
resolver = "2"

[workspace.dependencies]
dupe = "0.9"
rayon = "1.10"

[profile.release]
lto = true
strip = true
