[package]
name = "samlang-checker"
version = "0.9.1"
edition = "2021"

[dependencies]
enum-as-inner = "0.5.1"
itertools = "0.12.1"
phf = { version = "0.11", features = ["macros"] }
samlang-ast = { path = "../samlang-ast" }
samlang-collections = { path = "../samlang-collections" }
samlang-errors = { path = "../samlang-errors" }
samlang-heap = { path = "../samlang-heap" }
samlang-parser = { path = "../samlang-parser" }

[dev-dependencies]
pretty_assertions = "1.4.0"
