[package]
name = "samlang-checker"
version = "0.10.1"
edition = "2024"

[dependencies]
enum-as-inner = "0.5.1"
itertools = "0.14.0"
samlang-ast = { path = "../samlang-ast" }
samlang-collections = { path = "../samlang-collections" }
samlang-errors = { path = "../samlang-errors" }
samlang-heap = { path = "../samlang-heap" }
samlang-parser = { path = "../samlang-parser" }

[dev-dependencies]
pretty_assertions = "1.4.1"
