[package]
name = "samlang-cli"
version = "0.11.0"
edition = "2024"

[dependencies]
pretty_assertions = "1.4.1"
samlang-ast = { path = "../samlang-ast" }
samlang-compiler = { path = "../samlang-compiler" }
samlang-configuration = { path = "../samlang-configuration" }
samlang-errors = { path = "../samlang-errors" }
samlang-heap = { path = "../samlang-heap" }
samlang-parser = { path = "../samlang-parser" }
samlang-printer = { path = "../samlang-printer" }
samlang-profiling = { path = "../samlang-profiling" }
samlang-services = { path = "../samlang-services" }
serde_json = "1.0"
tokio = { version = "1.52.3", features = ["io-util", "io-std", "macros", "rt-multi-thread"] }
tower-lsp = "0.20.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(release)'] }
