[package]
name = "samlang-compiler"
version = "0.9.1"
edition = "2021"

[dependencies]
enum-as-inner = "0.5.1"
itertools = "0.12.1"
samlang-ast = { path = "../samlang-ast" }
samlang-checker = { path = "../samlang-checker" }
samlang-collections = { path = "../samlang-collections" }
samlang-errors = { path = "../samlang-errors" }
samlang-heap = { path = "../samlang-heap" }
samlang-optimization = { path = "../samlang-optimization" }
samlang-parser = { path = "../samlang-parser" }
samlang-profiling = { path = "../samlang-profiling" }
wat = "1.200.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
