[package]
name = "samlang-compiler"
version = "0.11.0"
edition = "2024"

[dependencies]
dupe = { workspace = true }
enum-as-inner = "0.7.0"
itertools = "0.15.0"
ordermap = "1.2.0"
samlang-ast = { path = "../samlang-ast" }
samlang-checker = { path = "../samlang-checker" }
samlang-collections = { path = "../samlang-collections" }
samlang-errors = { path = "../samlang-errors" }
samlang-heap = { path = "../samlang-heap" }
samlang-optimization = { path = "../samlang-optimization" }
samlang-parser = { path = "../samlang-parser" }
samlang-profiling = { path = "../samlang-profiling" }
rayon = { workspace = true }
wast = "252.0.0"
wat = "1.252.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
