[package]
name = "samlang-core"
version = "0.9.1"
edition = "2021"

[dependencies]
enum-as-inner = "0.5.1"
enum-iterator = "1.4.1"
itertools = "0.11.0"
phf = { version = "0.11", features = ["macros"] }
samlang-ast = { path = "../samlang-ast" }
samlang-collections = { path = "../samlang-collections" }
samlang-errors = { path = "../samlang-errors" }
samlang-heap = { path = "../samlang-heap" }
wat = "1.0.66"

[dev-dependencies]
pretty_assertions = "1.4.0"
wasmi = "0.30.0"
