[package]
name = "samlang-parser"
version = "0.10.1"
edition = "2021"

[dependencies]
itertools = "0.13.0"
phf = { version = "0.11", features = ["macros"] }
samlang-ast = { path = "../samlang-ast" }
samlang-errors = { path = "../samlang-errors" }
samlang-heap = { path = "../samlang-heap" }

[dev-dependencies]
pretty_assertions = "1.4.1"
