[package]
name = "samlang-parser"
version = "0.10.1"
edition = "2024"

[dependencies]
itertools = "0.14.0"
logos = "0.15.1"
samlang-ast = { path = "../samlang-ast" }
samlang-errors = { path = "../samlang-errors" }
samlang-heap = { path = "../samlang-heap" }

[dev-dependencies]
pretty_assertions = "1.4.1"
