[package]
name = "samlang-parser"
version = "0.11.0"
edition = "2024"

[dependencies]
dupe = { workspace = true }
itertools = "0.15.0"
logos = "0.16.1"
samlang-ast = { path = "../samlang-ast" }
samlang-errors = { path = "../samlang-errors" }
samlang-heap = { path = "../samlang-heap" }

[dev-dependencies]
pretty_assertions = "1.4.1"
