[package]
name = "samlang-printer"
version = "0.9.1"
edition = "2021"

[dependencies]
enum-as-inner = "0.5.1"
itertools = "0.12.0"
samlang-ast = { path = "../samlang-ast" }
samlang-errors = { path = "../samlang-errors" }
samlang-heap = { path = "../samlang-heap" }
samlang-parser = { path = "../samlang-parser" }

[dev-dependencies]
pretty_assertions = "1.4.0"
