[package]
name = "samlang-services"
version = "0.9.1"
edition = "2021"

[dependencies]
itertools = "0.11.0"
samlang-ast = { path = "../samlang-ast" }
samlang-checker = { path = "../samlang-checker" }
samlang-errors = { path = "../samlang-errors" }
samlang-heap = { path = "../samlang-heap" }
samlang-parser = { path = "../samlang-parser" }
samlang-printer = { path = "../samlang-printer" }
samlang-profiling = { path = "../samlang-profiling" }

[dev-dependencies]
pretty_assertions = "1.4.0"
