[package]
name = "samlang-wasm"
version = "0.9.1"
edition = "2021"

[dependencies]
js-sys = "0.3.64"
samlang-core = { path = "../samlang-core" }
samlang-heap = { path = "../samlang-heap" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen = "0.2.87"

[lib]
crate-type = ["cdylib", "rlib"]
