[package]
name = "samlang-wasm"
version = "0.10.1"
edition = "2021"

[dependencies]
js-sys = "0.3.64"
samlang-ast = { path = "../samlang-ast" }
samlang-compiler = { path = "../samlang-compiler" }
samlang-heap = { path = "../samlang-heap" }
samlang-parser = { path = "../samlang-parser" }
samlang-services = { path = "../samlang-services" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen = "0.2.100"

[lib]
crate-type = ["cdylib", "rlib"]
